small bugs with image for train

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	  </div>
   
 	  <div class="col-1-3">
-		<h3>Spider-Man Triva</h3>
+		<h3>Spider-Man Trivia</h3>
 		<a id="spidermanTriviaModal" href="#spidermanTrivia" class="modal-link">
 		  <div class="overlay-container">
 			<div class="overlay">
@@ -150,7 +150,7 @@
 			<div class="overlay">
 			  <i class="zmdi zmdi-zoom-in"></i>
 			</div>
-			<img src="assets/images/trainScheduler.jpg" alt="trainScheduler">
+			<img src="assets/images/trainscheduler.jpg" alt="trainScheduler">
 		  </div>
 		</a>
 	  </div>
