--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </div>
 	  <div id="home" class="header">
 	<div id="video-container">
-	  <video onloadedmetadata="this.muted = true" playsinline="" autoplay="" muted="" loop="" class="coverr" poster="/images/typing.jpg">
+	  <video onloadedmetadata="this.muted = true" playsinline="" autoplay="" muted="" loop="" class="coverr" poster="assets/images/typing.jpg">
 		  <source src="assets/images/typing.mp4" type="video/mp4">
 	  </video>
 	</div>
