fixed errors in names for github projects

--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
 			<p>Match your points to the random number to save the Galaxy. If you go over, Thanos wins, and you lose!</p>
   
 		<div>
-		  <a href="https://github.com/chrisvoyager/unit-4-game" class="btn btn-sm" title="Infinity Stones Collector on GitHub"><i class="zmdi zmdi-github-box"></i> View on GitHub</a>
+		  <a href="https://github.com/chrisvoyager/Infinity-Stones-Collector" class="btn btn-sm" title="Infinity Stones Collector on GitHub"><i class="zmdi zmdi-github-box"></i> View on GitHub</a>
 		</div>
 		<div>
-			<a href="https://chrisvoyager.github.io/unit-4-game/" class="btn btn-sm" title="Infinity Stones Collector Website"><i class="zmdi zmdi-globe"></i> Infinity Stones Collector Website</a>
+			<a href="https://chrisvoyager.github.io/Infinity-Stones-Collector/" class="btn btn-sm" title="Infinity Stones Collector Website"><i class="zmdi zmdi-globe"></i> Infinity Stones Collector Website</a>
 		</div>
 	  </div>
 	</div>
@@ -324,10 +324,10 @@
 			<p>Simply click on one of the tabs at the top of the page with a Melee Character in it's name, or just add your own by typing a charachter name into the box and then clicking "Submit". Have fun!</p>
   
 		<div>
-		  <a href="https://github.com/chrisvoyager/giftastic" class="btn btn-sm" title="giftastic on GitHub"><i class="zmdi zmdi-github-box"></i> View on GitHub</a>
+		  <a href="https://github.com/chrisvoyager/GifTastic" class="btn btn-sm" title="giftastic on GitHub"><i class="zmdi zmdi-github-box"></i> View on GitHub</a>
 		</div>
 		<div>
-			<a href="https://chrisvoyager.github.io/giftastic/" class="btn btn-sm" title="giftastic Website"><i class="zmdi zmdi-globe"></i> Giftastic Website</a>
+			<a href="https://chrisvoyager.github.io/GifTastic/" class="btn btn-sm" title="giftastic Website"><i class="zmdi zmdi-globe"></i> Giftastic Website</a>
 		</div>
 	  </div>
 	</div>
